# parity-bridge

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  add_license.sh  deployment_guide.md  file_header.txt  license_header.txt  rustfmt.toml  troubleshooting_guide.md  user_guide.md
.github/workflows/: check.yml
bridge/: Cargo.toml  build.rs
bridge/src/: accept_message_from_main.rs  api.rs  app.rs  authorities.rs  block_number_stream.rs  bridge.rs  config.rs  consume.rs  contract_connection.rs  contracts.rs  database.rs  deploy.rs  error.rs  future_heap.rs  helpers.rs  lib.rs  log_stream.rs  macros.rs  main_contract.rs  main_to_side_sign.rs  message_to_main.rs  message_to_mainnet.rs  ordered_stream.rs  relay_stream.rs  send_tx_with_receipt.rs  side_contract.rs  side_to_main_sign.rs  side_to_main_signatures.rs  signature.rs  test.rs  util.rs
bridge/src/bridge/: deploy.rs  deposit_relay.rs  mod.rs  withdraw_confirm.rs  withdraw_relay.rs
cli/: Cargo.toml  build.rs
cli/src/: cli.yml  main.rs
contracts/: Cargo.toml  EthereumBridge.abi  ForeignBridge.abi  HomeBridge.abi  KovanBridge.abi  SignerTest.abi  ValidatorSet.abi  bridge.sol  bridged_validator_set.sol  build.rs
contracts/src/: lib.rs
deploy/: Cargo.toml  build.rs
deploy/src/: lib.rs  main.rs  noop.rs  standard.rs
deploy/src/blocks/: after.rs  delay.rs  mod.rs  stream.rs
docs/: bridge_config.toml  bridge_with_dynamic_validator_set.md  bridge_with_dynamic_validator_set_2.md  bridged_validator_set.md  varying_home_and_foreign_addresses.md
examples/: README.md  config.toml  parity_config.toml  parity_password  parity_spec.json  parity_start.sh
integration-tests/: Cargo.toml  bridge_config.toml  home_chain.json  spec.json
integration-tests/src/: main.rs
integration-tests/tests/: basic_deposit_then_withdraw.rs
parity-ethereum-grandpa-builtin/: Cargo.toml
res/: gas_cost_estimates.txt
solaris-testing/: Cargo.toml  build.rs
solaris-testing/contracts/: BadgeReg.sol  Owned.sol
solaris-testing/tests/: badge_tests.rs  bridge_tests.rs
src/: actions.rs  api.rs  app.rs  bridge.rs  config.rs  contracts.rs  data.rs  database.rs  error.rs  l.rs  lib.rs  macros.rs  main.rs  runtime.rs  state.rs
src/bridge/: deploy.rs  deposit_relay.rs  mod.rs  withdraw_confirm.rs  withdraw_relay.rs
src/contracts/: eth.rs  eth_events.rs  kovan.rs  kovan_events.rs  mod.rs
srml-bridge-poa/: Cargo.toml
srml-bridge-poa/primitives/: Cargo.toml
srml-bridge-poa/primitives/src/: lib.rs
srml-bridge-poa/src/: error.rs  finality.rs  import.rs  lib.rs  validators.rs  verification.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: deposit_relay.rs  log_stream.rs  log_stream_basic.rs  withdraw_confirm.rs  withdraw_relay.rs
tools/: compile_contracts.sh  estimate_gas_costs.sh  solc_compile.sh
truffle/: .node-xmlhttprequest-content-37792  .soliumrc.json  package.json  truffle.js
truffle/contracts/: Migrations.sol  arbitrary_message_passing.sol  bridge.sol
truffle/test/: arbitrary.js  foreign-erc20.js  foreign.js  helpers.js  home.js  main.js  mainnet.js  message.js  message_signing.js  side-erc20.js  side.js  signer.js  testnet.js
truffle/test/helpers/: helpers.js
