[package]
name = "bridge"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
futures = "0.1"
futures-after = "0.1"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.8"
toml = "0.4.2"
docopt = "0.8.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "removed_lifetimes" }

[[bin]]
name = "bridge"
path = "src/main.rs"
