[package]
name = "bridge"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
futures = "0.1"
futures-after = "0.1"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.8"
toml = "0.4.2"
docopt = "0.8.1"
#web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "removed_lifetimes" }
web3 = { path = "../rust-web3" }
log = "0.3"
env_logger = "0.3"
error-chain = "0.11.0-rc.2"
futures-cpupool = "0.1.5"
 
[[bin]]
name = "bridge"
path = "src/main.rs"
