[package]
name = "bridge"
version = "0.4.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
bridge-contracts = { path = "../contracts" }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.8"
tokio-timer = "0.1.2"
toml = "0.4.2"
web3 = { git = "https://github.com/forrest-marshall/rust-web3", branch = "get-logs" }
error-chain = "0.11.0"
ethabi = { git = "https://github.com/paritytech/ethabi" }
rustc-hex = "1.0"
log = "0.3"
ethereum-types = "0.3"
pretty_assertions = "0.2.1"
tiny-keccak = "1.3"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.6.1"
jsonrpc-core = "8.0"

[build-dependencies]
solc = { git = "https://github.com/snd/rust_solc" }
