[package]
name = "bridge"
version = "0.5.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
bridge-contracts = { path = "../contracts" }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.8"
tokio-timer = "0.1"
toml = "0.5.5"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
error-chain = "0.12"
ethabi = "9.0"
rustc-hex = "2.0"
log = "0.4"
ethereum-types = "0.8"
pretty_assertions = "0.6.1"
tiny-keccak = "1.3"

[dev-dependencies]
tempfile = "3"
quickcheck = "0.9"
jsonrpc-core = "14.0"
