[package]
name = "parity-bridge"
version = "0.5.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[[bin]]
name = "parity-bridge"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.8"
docopt = "1.0"
log = "0.4"
env_logger = "0.6"
futures = "0.1.14"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
