[package]
name = "bridge-contracts"
version = "0.4.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
ethabi = { git = "https://github.com/paritytech/ethabi", branch = "tomusdrw-master" }
ethabi-derive = { git = "https://github.com/paritytech/ethabi", branch = "tomusdrw-master" }
ethabi-contract = { git = "https://github.com/paritytech/ethabi", branch = "tomusdrw-master" }
