[package]
name = "integration-tests"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
bridge = { path = "../bridge" }
bridge-contracts = { path = "../contracts", features = ["integration-tests"] }
ethabi = "6.0"
ethereum-types = "0.4"
futures = "0.1"
jsonrpc-core = "8.0"
pretty_assertions = "0.2.1"
rustc-hex = "1.0"
serde_json = "1.0"
tempdir = "0.3.5"
tokio-core = "0.1.8"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
