[package]
name = "parity-ethereum-grandpa-builtin"
description = "A Parity Ethereum client builtin contract able to verify Grandpa Finality Proofs."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
