[package]
name = "srml-bridge-poa"
description = "A Substrate Runtime module that is able to verify PoA headers and their finality."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rstd = { package = "sr-std", path = "../substrate/core/sr-std", default-features = false }
support = { package = "srml-support", path = "../substrate/srml/support", default-features = false }
sr-primitives = { path = "../substrate/core/sr-primitives", default-features = false }
system = { package = "srml-system", path = "../substrate/srml/system", default-features = false }
runtime-io = { package = "sr-io", path = "../substrate/core/sr-io", default-features = false }
primitives = { package = "srml-bridge-poa-primitives", path = "./primitives", default-features = false }

[dev-dependencies]
primitives = { package = "srml-bridge-poa-primitives", path = "./primitives", features = ["std", "test-helpers"] }
parity-crypto = { version = "0.4", features = ["publickey"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"primitives/std",
]
