[package]
name = "parity-bridge-tests"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
bridge = { path = "../bridge" }
futures = "0.1"
jsonrpc-core = "8.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "bridge" }
serde_json = "1.0"
pretty_assertions = "0.2.1"
ethabi = { git = "https://github.com/paritytech/ethabi", branch = "tomusdrw-master" }
ethereum-types = "0.3"
rustc-hex = "1.0"
