[package]
name = "srml-bridge-poa-primitives"
description = "Module that contains definitions for interacting with Bridge Substrate Runtime module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.2.0", optional = true }
ethereum-types = { version = "0.8.0", default-features = false }
parity-bytes = { version = "0.1.1", default-features = false }
primitive-types = { version = "0.5.1", default-features = false, features = ["codec", "rlp"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rlp = { version = "0.4.3", default-features = false }
tiny-keccak = { version = "1.5.0", default-features = false }
rstd = { package = "sr-std", path = "/home/svyatonik/dev/substrate/core/sr-std", default-features = false }
sr-primitives = { path = "/home/svyatonik/dev/substrate/core/sr-primitives", default-features = false }

[features]
default = ["std"]
std =[
	"serde/std",
	"serde-big-array",
	"ethereum-types/std",
	"parity-bytes/std",
	"primitive-types/std",
	"codec/std",
	"rstd/std",
	"sr-primitives/std",
]
