[package]
name = "srml-bridge-poa-primitives"
description = "Module that contains definitions for interacting with Bridge Substrate Runtime module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.2", optional = true }
ethbloom = { version = "0.8.1", default-features = false }
parity-bytes = { version = "0.1", default-features = false }
primitive-types = { version = "0.5", default-features = false, features = ["codec", "rlp", "serde"] }
fixed-hash = "0.5.1"
impl-rlp = "0.2.1"
impl-serde = "0.2.3"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rlp = { version = "0.4", default-features = false }
tiny-keccak = "1.5"
rstd = { package = "sr-std", path = "../../substrate/core/sr-std", default-features = false }
sr-primitives = { path = "../../substrate/core/sr-primitives", default-features = false }

[features]
default = ["std"]
test-helpers = []
std = [
	"serde/std",
	"serde-big-array",
	"ethbloom/std",
	"parity-bytes/std",
	"primitive-types/std",
	"codec/std",
	"rlp/std",
	"rstd/std",
	"sr-primitives/std",
]
